test data and flag for clinics